# chapaty-template

./: .gitignore  AI.md  Cargo.toml  Makefile  README.md
.ai/: agent-plan.md  algorithm-ideas.md  chapaty-api.md  rust-vibe-rules.md
.github/workflows/: ci.yml
src/: main.rs
src/agents/demo/: agent.rs  spec.md
visualization/: generate_tearsheet.py  requirements.txt
